# ci-pipeline

./: .actrc  .dockerignore  .gitignore  .node-version  Dockerfile  Makefile  QUICKREF.md  README.md  docker-compose.yml  env.example  project.conf  pyproject.toml  requirements-app.txt  requirements.md  requirements.txt  run-local.sh
.github/workflows/: cd.yml  ci.yml  local.yml
.pipeline/: baseline.json
app/: __init__.py  logic.py  main.py
deployments/: dev.yml  prod.yml  staging.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  TESTING.md
scripts/: build.sh  deploy.sh  lint.sh  security.sh  test.sh  typecheck.sh
tests/: test_main.py
